--- a/pilots/pilot1/vacc_manyBelief_pilot1.Rmd
+++ b/pilots/pilot1/vacc_manyBelief_pilot1.Rmd
@@ -9,7 +9,7 @@ output:
 
 
 ```{r}
-df <- read.csv("data/vb_pilot1.csv")
+df <- read.csv("../data/vb_pilot1.csv")
 df <- df[which(df$check_3==3 & df$check_5==5),]
 
 # first need to do some data cleaning
