--- a/study2/lab_pres_nb_2018-6-11.Rmd
+++ b/study2/lab_pres_nb_2018-6-11.Rmd
@@ -10,11 +10,11 @@ output:
 
 
 ```{r load in existing objects, message=FALSE, warning=FALSE}
-net.struct <- readRDS("net-struct-cogsci2018.rds")
+# net.struct <- readRDS("net-struct-cogsci2018.rds")
 
 source("../study1/vacc_import_data.R")
-source("../Scripts/gmod_tools.R")
-source("../Scripts/virtualEvidence.R")
+source("../scripts/gmod_tools.R")
+source("../scripts/virtualEvidence.R")
 
 library(bnlearn)
 library(rjags)
@@ -23,7 +23,7 @@ library(patchwork)
 
 ```{r load and tidy study 3 data, include = F}
 # load data
-d_all <- read.csv("data/study3_data.csv")
+d_all <- read.csv("../data/study2_data.csv")
 
 # reformat to match previous analyses (i.e., 2 rows per participant)
 d_demo <- d_all %>% 
