--- a/study2/vacc_manyBelief_study2_modelsims.Rmd
+++ b/study2/vacc_manyBelief_study2_modelsims.Rmd
@@ -27,7 +27,7 @@ In this notebook, I'm going to focus on the first issue: predicting effects of i
 
 ```{r tidy, include = F}
 # load data
-d_all <- read.csv("data/study3_data.csv")
+d_all <- read.csv("../data/study2_data.csv")
 
 # reformat to match previous analyses (i.e., 2 rows per participant)
 d_demo <- d_all %>% 
