--- a/study2/vacc_manyBelief_study2_overpar.Rmd
+++ b/study2/vacc_manyBelief_study2_overpar.Rmd
@@ -35,7 +35,7 @@ This is a document where we do a "deep dive" on the "Overparenting" scale, which
 
 ```{r tidy, include = F}
 # load data
-d_all <- read.csv("data/study3_data.csv")[-1]
+d_all <- read.csv("../data/study2_data.csv")[-1]
 
 # reformat to match previous analyses (i.e., 2 rows per participant)
 d_demo <- d_all %>% 
